--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Test Guide</title>
+    <title>Audium Beta Test</title>
+    <!-- Meta tags for sharing -->
+    <meta
+      property="og:title"
+      content="Audium Beta Test - Experience Art Differently"
+    />
+    <meta
+      property="og:description"
+      content="Discover a new way to experience art at Galeri Zen1 with Audium's immersive audio guide."
+    />
+    <meta property="og:image" content="https://via.placeholder.com/800x600" />
+    <!-- Replace with the actual image URL -->
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <!-- Replace with actual URL -->
+    <meta name="twitter:card" content="summary_large_image" />
+
     <!-- Bootstrap CSS -->
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -14,30 +29,55 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Font Awesome for Instagram Icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <style>
-      /* Custom primary color */
-      .btn-primary {
-        background-color: #4361ee !important;
-        color: #ffffff !important;
-        border-color: #4361ee !important;
-        border-radius: 30px !important;
-      }
+      /* Background image settings for full coverage */
       body {
         font-family: "Inter", sans-serif;
-        background-color: #f8f9fa;
-        padding: 20px;
+        background-image: url("https://i.ibb.co.com/2h0g2d9/Spot-Homepage-2.png"); /* Replace with your actual image URL */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        height: 100vh;
+        margin: 0;
+        color: #ffffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 64px;
       }
-      h1,
+      /* Header and text styling */
+      h1 {
+        font-weight: bold;
+        font-size: 22px;
+        color: #000000;
+        text-align: left;
+      }
       h2 {
-        font-weight: 700;
+        font-weight: bold;
+        font-size: 17px;
+        color: #000000;
+        text-align: left;
       }
-      .step-card {
-        border: 1px solid #e0e0e0;
-        border-radius: 8px;
-        padding: 20px;
-        margin-top: 20px;
-        background-color: #ffffff;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      p {
+        font-weight: 400;
+        font-size: 15px;
+        color: #000000;
+        text-align: left;
+        margin: 0;
+      }
+      /* Button styling */
+      .btn-primary {
+        background-color: #000000 !important; /* Black button color */
+        color: #ffffff !important;
+        border-color: #000000 !important;
+        border-radius: 30px !important;
       }
       .btn-custom {
         width: 100%;
@@ -46,17 +86,69 @@
         font-size: 16px;
         border-radius: 30px;
       }
+      .btn-disabled {
+        background-color: #cccccc !important;
+        border-color: #cccccc !important;
+        pointer-events: none;
+      }
+      /* Card customization */
+      .title-card,
+      .step-card {
+        background-color: #ffffff;
+        border: none;
+        border-radius: 36px;
+        padding: 32px 24px;
+        margin-top: 20px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        color: #000000;
+        text-align: left;
+        position: relative;
+      }
+      /* Logo styling */
+      .logo {
+        width: 32px;
+        height: 32px;
+        margin-bottom: 10px;
+      }
+      /* Instagram Icon */
+      .instagram-icon {
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        font-size: 20px;
+        color: #000000;
+      }
     </style>
   </head>
   <body>
-    <div class="container text-center">
-      <h1 class="text-primary">Welcome to Our App Testing</h1>
+    <!-- Title Card with Logo and Instagram Icon -->
+    <div class="container text-left">
+      <div class="title-card">
+        <img
+          src="https://i.ibb.co.com/yh0jS5D/Clip-path-group-6.png"
+          alt="Logo"
+          class="logo"
+        />
+        <!-- Replace with actual logo URL -->
+        <a
+          href="https://www.instagram.com/audium.app/"
+          target="_blank"
+          class="instagram-icon"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <h1>Audium Beta Test</h1>
+        <p>Discover a new way to experience art at Gallery.</p>
+      </div>
 
       <!-- Step 1: Install TestFlight Card -->
       <div id="step1" class="step-card" style="display: none">
-        <h2 class="text-primary">Step 1</h2>
-        <p>Please install TestFlight to continue.</p>
+        <h2>Step 1: Install TestFlight</h2>
+        <p>
+          To start exploring, first download <strong>TestFlight</strong> to
+          access our beta version.
+        </p>
         <button
+          id="installButton"
           class="btn btn-primary btn-custom"
           onclick="installTestFlight()"
         >
@@ -66,16 +158,39 @@
 
       <!-- Step 2: Open Invitation Link Card -->
       <div id="step2" class="step-card" style="display: none">
-        <h2 class="text-primary">Step 2</h2>
+        <h2>Step 2: Access Audium Beta</h2>
         <p>
-          Once TestFlight is installed, click the button below to open the app
-          invitation.
+          Once TestFlight is installed, tap the button below to begin your
+          immersive audio journey with Audium.
         </p>
         <button
+          id="invitationButton"
           class="btn btn-primary btn-custom"
           onclick="redirectToInvitation()"
         >
-          Open TestFlight Invitation
+          Open Audium in TestFlight
+        </button>
+      </div>
+
+      <!-- Incompatible Device Message -->
+      <div id="incompatibleMessage" class="step-card" style="display: none">
+        <h2 class="text-danger">Device Not Compatible</h2>
+        <p>
+          No need to worry! You can still enjoy the Audium experience. Visit the
+          <strong>Audium Admin</strong> at Galeri Zen1 to explore this immersive
+          journey in person.
+        </p>
+      </div>
+
+      <!-- Feedback Card (Visible from the Start) -->
+      <div id="feedbackCard" class="step-card">
+        <h2>We Value Your Feedback</h2>
+        <p>
+          Help us improve by sharing your experience with Audium Beta. Your
+          feedback is invaluable!
+        </p>
+        <button class="btn btn-primary btn-custom" onclick="openFeedbackForm()">
+          Give Feedback
         </button>
       </div>
     </div>
@@ -86,8 +201,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
-      // Placeholder for TestFlight link
+      // Placeholder for TestFlight link and feedback form URL
       const invitationLink = "https://testflight.apple.com/join/YOUR_APP_LINK";
+      const feedbackFormLink = "https://forms.gle/YOUR_GOOGLE_FORM_LINK"; // Replace with your Google Form link
 
       // Function to detect iOS version
       function getiOSVersion() {
@@ -101,22 +217,35 @@
         return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
       }
 
-      // Function to redirect to TestFlight installation on App Store
+      // Function to redirect to TestFlight installation on App Store and change button state
       function installTestFlight() {
-        window.location.href =
-          "https://apps.apple.com/us/app/testflight/id899247664";
+        window.open(
+          "https://apps.apple.com/us/app/testflight/id899247664",
+          "_blank"
+        ); // Open in new tab
+        const installButton = document.getElementById("installButton");
+        installButton.textContent = "Installed";
+        installButton.classList.add("btn-disabled");
       }
 
-      // Function to redirect to TestFlight invitation link
+      // Function to redirect to TestFlight invitation link and change button state
       function redirectToInvitation() {
-        window.location.href = invitationLink;
+        window.open(invitationLink, "_blank"); // Opens link in new tab
+        const invitationButton = document.getElementById("invitationButton");
+        invitationButton.textContent = "Link Opened";
+        invitationButton.classList.add("btn-disabled");
+      }
+
+      // Function to open Google Form feedback link
+      function openFeedbackForm() {
+        window.open(feedbackFormLink, "_blank"); // Opens Google Form in new tab
       }
 
       // Main function to check device compatibility
       function checkDeviceCompatibility() {
         if (!isIOS()) {
-          document.getElementById("step1").innerHTML =
-            "<p class='text-danger'>This guide is only for iOS devices.</p>";
+          document.getElementById("incompatibleMessage").style.display =
+            "block";
           return;
         }
 
@@ -125,8 +254,8 @@
           document.getElementById("step1").style.display = "block"; // Show Step 1
           document.getElementById("step2").style.display = "block"; // Show Step 2
         } else {
-          document.getElementById("step1").innerHTML =
-            "<p class='text-danger'>Your iOS version is below 16. Please update your iOS version.</p>";
+          document.getElementById("incompatibleMessage").style.display =
+            "block";
         }
       }
 
