--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        height: 100vh;
+        min-height: 100vh; /* Updated from height: 100vh to min-height */
         margin: 0;
         color: #ffffff;
         display: flex;
