--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     />
     <meta
       property="og:description"
-      content="Discover a new way to experience art at Galeri Zen1 with Audium's immersive audio guide."
+      content="Discover a new way to experience art at Gallery with Audium's immersive audio guide."
     />
-    <meta property="og:image" content="https://via.placeholder.com/800x600" />
+    <meta property="og:image" content="https://i.ibb.co.com/XbYyvbK/Frame-11.png" />
     <!-- Replace with the actual image URL -->
-    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:url" content="https://www.instagram.com/audium.app/" />
     <!-- Replace with actual URL -->
     <meta name="twitter:card" content="summary_large_image" />
 
@@ -202,8 +202,8 @@
 
     <script>
       // Placeholder for TestFlight link and feedback form URL
-      const invitationLink = "https://testflight.apple.com/join/YOUR_APP_LINK";
-      const feedbackFormLink = "https://forms.gle/YOUR_GOOGLE_FORM_LINK"; // Replace with your Google Form link
+      const invitationLink = "https://testflight.apple.com/join/VRy9d2Bf";
+      const feedbackFormLink = "https://forms.gle/Mcua55dsAdfsBrJa7"; // Replace with your Google Form link
 
       // Function to detect iOS version
       function getiOSVersion() {
@@ -220,7 +220,7 @@
       // Function to redirect to TestFlight installation on App Store and change button state
       function installTestFlight() {
         window.open(
-          "https://apps.apple.com/us/app/testflight/id899247664",
+          "https://testflight.apple.com/join/VRy9d2Bf",
           "_blank"
         ); // Open in new tab
         const installButton = document.getElementById("installButton");
