--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <script>
       // Placeholder for TestFlight link and feedback form URL
-      const invitationLink = "https://testflight.apple.com/join/VRy9d2Bf";
+      const invitationLink = "https://testflight.apple.com/join/HT5wKBxU";
       const feedbackFormLink = "https://forms.gle/Mcua55dsAdfsBrJa7"; // Replace with your Google Form link
 
       // Function to detect iOS version
