--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Audium Beta Test</title>
+    <title>Audium</title>
     <!-- Meta tags for sharing -->
     <meta
       property="og:title"
-      content="Audium Beta Test - Experience Art Differently"
+      content="Audium Beta Test - Experience Exhibition Differently"
     />
     <meta
       property="og:description"
-      content="Discover a new way to experience art at Gallery with Audium's immersive audio guide."
+      content="Discover a new way to experience Exhibition with Audium's immersive audio guide."
     />
     <meta property="og:image" content="https://i.ibb.co.com/XbYyvbK/Frame-11.png" />
     <!-- Replace with the actual image URL -->
@@ -38,7 +38,7 @@
       /* Background image settings for full coverage */
       body {
         font-family: "Inter", sans-serif;
-        background-image: url("https://i.ibb.co.com/2h0g2d9/Spot-Homepage-2.png"); /* Replace with your actual image URL */
+        background-image: url("background.png"); 
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -137,7 +137,7 @@
           ><i class="fab fa-instagram"></i
         ></a>
         <h1>Audium Beta Test</h1>
-        <p>Discover a new way to experience art at Gallery.</p>
+        <p>Discover a new way to experience Exhibition at Exhibit.</p>
       </div>
 
       <!-- Step 1: Install TestFlight Card -->
@@ -158,7 +158,7 @@
 
       <!-- Step 2: Open Invitation Link Card -->
       <div id="step2" class="step-card" style="display: none">
-        <h2>Step 2: Access Audium Beta</h2>
+        <h2>Step 2: Download Audium</h2>
         <p>
           Once TestFlight is installed, tap the button below to begin your
           immersive audio journey with Audium.
@@ -182,7 +182,7 @@
         </p>
       </div>
 
-      <!-- Feedback Card (Visible from the Start) -->
+ 
       <div id="feedbackCard" class="step-card">
         <h2>We Value Your Feedback</h2>
         <p>
@@ -202,7 +202,7 @@
 
     <script>
       // Placeholder for TestFlight link and feedback form URL
-      const invitationLink = "https://testflight.apple.com/join/HT5wKBxU";
+      const invitationLink = "https://testflight.apple.com/join/VRy9d2Bf";
       const feedbackFormLink = "https://forms.gle/Mcua55dsAdfsBrJa7"; // Replace with your Google Form link
 
       // Function to detect iOS version
