--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         />
         <!-- Replace with actual logo URL -->
         <a
-          href="https://www.instagram.com/audium.app/"
+          href="https://www.instagram.com/audiumexperience/"
           target="_blank"
           class="instagram-icon"
           ><i class="fab fa-instagram"></i
         ></a>
-        <h1>Audium Beta Test</h1>
-        <p>Discover a new way to experience Exhibition at Exhibit.</p>
+        <h1>Audium</h1>
+        <p>Discover a new way to experience Exhibition.</p>
       </div>
 
       <!-- Step 1: Install TestFlight Card -->
